--- a/src/blocks/article/article.scss
+++ b/src/blocks/article/article.scss
@@ -125,6 +125,7 @@
   &__img {
     border-radius: 8px;
     overflow: hidden;
+    margin-bottom: 20px;
 
     &--main {
       border-radius: 10px;
