--- a/src/blocks/field-num/field-num.scss
+++ b/src/blocks/field-num/field-num.scss
@@ -20,6 +20,12 @@
     display: block;
     position: relative;
     width: 78px;
+
+    .cart-product & {
+      @media (min-width: $screen-lg) {
+        width: 119px;
+      }
+    }
   }
 
   &__input {
@@ -32,6 +38,14 @@
 
     #{$block-name}:not(#{$block-name}--disabled) button:focus ~ & { // stylelint-disable-line
       @include field-focus;
+    }
+
+    .cart-product & {
+      @media (min-width: $screen-lg) {
+        padding: 0 40px;
+        font-size: 18px;
+        line-height: 32px;
+      }
     }
   }
 
@@ -65,6 +79,13 @@
       height: 1px;
       background-color: $tw-black;
       transform: translate(-50%,-50%);
+    }
+
+    .cart-product & {
+      @media (min-width: $screen-lg) {
+        width: 40px;
+        height: 32px;
+      }
     }
 
     &--plus {
